--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,7 +1,7 @@
-MONGODB_URI="mongodb://mongo-service/wanderlust"
-REDIS_URL="redis://redis-service:6379"
+MONGODB_URI="mongodb://mongodb/wanderlust"          # 'mongodb' is the name of the Mongo container
+REDIS_URL="redis://redis-service:6379"              # Only if you're actually running Redis as 'redis-service'
 PORT=8080
-FRONTEND_URL="http://18.224.72.54:5173"
+FRONTEND_URL="http://admiring_franklin:5173"        # Use container name, not public IP, inside Docker network
 ACCESS_COOKIE_MAXAGE=120000
 ACCESS_TOKEN_EXPIRES_IN='120s'
 REFRESH_COOKIE_MAXAGE=120000
